Fix total trades display issue - remove mock data, implement real database integration
- Removed all mock trade data from TradingService
- Implemented real database integration using AccountTransactionRepository
- Created recordTrade() method to save transactions and update agent statistics
- Updated getAgentTrades() and getRecentActivity() to read from database
- Added convertTransactionToTradeResponse() method for API responses
- Removed obsolete AgentTradeData class and sample trade initialization
- Removed /initialize-sample-trades endpoint from controller
- All trades now flow through normal real-time database operations